<resources>
    <string name="app_name">Insight</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_hint">Already have an account? Sign In</string>
    <string name="signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="title_activity_home_">home_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_home">home_Activity</string>
    <string name="title_activity_navigation_drawer">navigation_drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
