<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/loginHeader"
                android:text="Register"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextNameid"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_name_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputMobile"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextMobileid"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_mobile_number_hint"
                    android:inputType="phone"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextEmailid"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextPasswordid"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUpBtid"
                style="@style/loginButton"
                android:text="Signup"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/loginViewsMargin"/>


            <TextView
                android:id="@+id/signin-pageid"
                style="@style/parent"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:text="@string/login_hint"
                android:layout_marginTop="@dimen/loginViewsMargin" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>